--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-gap: 10px;
+      width: 1920px;
+      height: 1080px;
+
     }
     video {
       width: 100%;
