--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
 <head>
   <title>WebRTC Voice Chat & Screen Share</title>
   <style>
+    body {
+      background-image: url(../IMG_7565.jpg);
+      width: 100%;
+      height: 100%;
+      background-repeat: no-repeat;
+    }
     .container {
       max-width: 800px;
       margin: 0 auto;
@@ -14,8 +20,7 @@
       grid-gap: 10px;
     }
     video {
-        width: 1920px;
-        height: 1080px;
+        width: 100%;
       object-fit: cover;
     }
     .controls {
