--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,6 @@
 <head>
   <title>WebRTC Voice Chat & Screen Share</title>
   <style>
-    body {
-      background-image: url(../IMG_7565.jpg);
-      width: 100%;
-      height: 100%;
-      background-repeat: no-repeat;
-    }
     .container {
       max-width: 800px;
       margin: 0 auto;
@@ -18,9 +12,11 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
       grid-gap: 10px;
+      height: 450px;
     }
     video {
         width: 100%;
+        height: 100%;
       object-fit: cover;
     }
     .controls {
