--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       height: 450px;
     }
     video {
-        width: 100%;
+        width: 900px;
         height: 100%;
       object-fit: cover;
     }
